--- a/todo-app-main/src/sass/_util-classes.scss
+++ b/todo-app-main/src/sass/_util-classes.scss
@@ -7,6 +7,5 @@
 }
 
 .b-shadow {
-  box-shadow: 0px 8px 10px 0px $light-grayish-blue,
-    0px 8px 20px 0px $light-grayish-blue;
+  box-shadow: 0px 8px 10px 0px $light-grayish-blue, 0px 8px 20px 0px $light-grayish-blue;
 }
